--- a/video_player/example/pubspec.yaml
+++ b/video_player/example/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   flutter: ">=2.10.0"
 
 dependencies:
+  chewie: ^1.3.4
   flutter:
     sdk: flutter
+  flutter_spinkit: ^5.1.0
   video_player: ^2.4.5
   video_player_macos: 1.0.6
   # video_player:
